// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar MenuButton MenuButton can render as a link 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #29333a!important;
  box-shadow: none!important;
  background-image: none!important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-0 {
  color: #7a7e82!important;
}

.emotion-0:hover {
  color: white;
}

<a
    class="bp3-button emotion-1"
    href="/test-home-url"
  >
    <span
      class="bp3-icon bp3-icon-folder-close emotion-0"
      icon="folder-close"
    >
      <svg
        data-icon="folder-close"
        height="32"
        viewBox="0 0 20 20"
        width="32"
      >
        <desc>
          folder-close
        </desc>
        <path
          d="M0 17c0 .55.45 1 1 1h18c.55 0 1-.45 1-1V7H0v10zM19 4H9.41l-1.7-1.71A.997.997 0 007 2H1c-.55 0-1 .45-1 1v3h20V5c0-.55-.45-1-1-1z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Navbar MenuButton MenuButton can render closed 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #29333a!important;
  box-shadow: none!important;
  background-image: none!important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-0 {
  color: #7a7e82!important;
}

.emotion-0:hover {
  color: white;
}

<button
    class="bp3-button emotion-1"
    type="button"
  >
    <span
      class="bp3-button-text"
    >
      <span
        class="bp3-icon bp3-icon-menu emotion-0"
        icon="menu"
      >
        <svg
          data-icon="menu"
          height="32"
          viewBox="0 0 20 20"
          width="32"
        >
          <desc>
            menu
          </desc>
          <path
            d="M1 6h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm18 3H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0 5H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Navbar MenuButton MenuButton can render custom Blueprint icons 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #29333a!important;
  box-shadow: none!important;
  background-image: none!important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-0 {
  color: #7a7e82!important;
}

.emotion-0:hover {
  color: white;
}

<button
    class="bp3-button emotion-1"
    type="button"
  >
    <span
      class="bp3-button-text"
    >
      <span
        class="bp3-icon bp3-icon-folder-close emotion-0"
        icon="folder-close"
      >
        <svg
          data-icon="folder-close"
          height="32"
          viewBox="0 0 20 20"
          width="32"
        >
          <desc>
            folder-close
          </desc>
          <path
            d="M0 17c0 .55.45 1 1 1h18c.55 0 1-.45 1-1V7H0v10zM19 4H9.41l-1.7-1.71A.997.997 0 007 2H1c-.55 0-1 .45-1 1v3h20V5c0-.55-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Navbar MenuButton MenuButton can render open 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #29333a!important;
  box-shadow: none!important;
  background-image: none!important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-0 {
  color: #7a7e82!important;
}

.emotion-0:hover {
  color: white;
}

<button
    class="bp3-button emotion-1"
    type="button"
  >
    <span
      class="bp3-button-text"
    >
      <span
        class="bp3-icon bp3-icon-cross emotion-0"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="32"
          viewBox="0 0 20 20"
          width="32"
        >
          <desc>
            cross
          </desc>
          <path
            d="M11.41 10l4.29-4.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-4.29-4.3a1.003 1.003 0 00-1.42 1.42L8.59 10 4.3 14.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4.29-4.3 4.29 4.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Navbar MenuButton MenuButton doesn't render when menuShowButton = false 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;
